# nvchad

./: '  .editorconfig  .gitignore  .luacheckrc  .luarc.json  AGENTS.md  Makefile  README.md  init.lua  lazy-lock.json
.agents/skills/create-skill/: SKILL.md
.agents/skills/lua/: SKILL.md
.agents/skills/lua-expert/: SKILL.md
.agents/skills/neovim/: SKILL.md
.agents/skills/nvim-expert/: SKILL.md
.agents/skills/telescope/: SKILL.md
.claude/skills/: lua-expert  nvim-expert  telescope
.claude/skills/lua-expert/: SKILL.md
.codex/agents/: neovim-lua-maintainer.toml
.github/: nvchad.instructions.md
.github/instructions/: nvchad.instructions.md
.github/skills/custom-commands/: SKILL.md
.github/skills/dotnet-ui/: SKILL.md
.github/skills/lsp-server/: SKILL.md
.github/skills/plugin-management/: SKILL.md
dev/dotnet-cli.nvim/: Makefile  README.md
dev/dotnet-cli.nvim/plugin/: dotnet-cli.lua
dev/dotnet-cli.nvim/tests/: minimal_init.lua
lua/: autocmds.lua  chadrc.lua  ft.lua  keymaps.lua  mappings.lua  nvconfig.lua  options.lua  shell.lua
lua/cmds/: dotnet.lua  python.lua  system.lua
lua/cmds/template/: FolderProfile.pubxml
lua/config/: autocmds.lua  borders.lua  cmp.lua  defaults.lua  events.lua  filetypes.lua  header.lua  init.lua  keymaps.lua  nvui.lua  options.lua  packages.lua  services.lua  snippets.lua  starter.lua  theme.lua
lua/config/formatter/: init.lua
lua/config/linter/: init.lua
lua/configs/: autocmds.lua  cmp-opt.lua  cmp.lua  conform-opt.lua  conform.lua  edgy.lua  gitsigns.lua  header.lua  init.lua  keymaps.lua  lazy.lua  lint.lua  lspconfig-config.lua  lspconfig-opt.lua  lspconfig.lua  nvim-lint-config.lua  nvim-lint-opt.lua  nvim-lint.lua  nvimtree.lua  options.lua  packages.lua  treesitter.lua
lua/configs/linter/template/: .markdownlint.yaml  eslint-legacy.config.mjs  eslint.config.mjs  pyproject.toml
lua/nvchad/: autocmds.lua  options.lua
lua/plugins/: ai.lua  cmp.lua  coding.lua  completion.lua  db.lua  debugger.lua  disabled.lua  dotnet.lua  editor.lua  extension.lua  formatter.lua  git.lua  init.lua  linter.lua  misc.lua  navigation.lua  noice.lua  notes.lua  snacks.lua  trouble.lua  ui.lua  ux.lua
lua/plugins/db/: init.lua
lua/service/: actions.lua  config.lua  core.lua  data.lua  init.lua  mason.lua  order.lua  renderer.lua  state.lua
lua/test/: helpers.lua  run.sh
lua/types/: nvim-tree.lua
lua/utils/: buffer.lua  cmp.lua  dotnet-ui.lua  dotnet_ui.lua  fs.lua  ft.lua  hl.lua  init.lua  logger.lua  lsp.lua  os.lua  path.lua  root.lua  service_state.lua  shell.lua  statusline.lua  str.lua  table.lua  tabufline.lua  term.lua  ui.lua
scripts/tests/: minimal.vim
spec/: helpers.lua  run.sh
spec/utils/: cmp_spec.lua  fs_spec.lua  os_spec.lua  str_spec.lua  table_spec.lua
(+128 files in other folders)
