# example python config for uv manager
[project]
name = ""
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # -------------------- type stubs --------------------
  "pandas-stubs",
  "scipy-stubs",
  "microsoft-python-type-stubs@git+https://github.com/microsoft/python-type-stubs.git",

  # -------------------- visualization --------------------
  "matplotlib",
  "seaborn",

  # -------------------- testing --------------------
  "pytest",
  "psutil",
  "debugpy",

  # -------------------- util --------------------
  "setuptools",
  "wheel",
  "python-dotenv",
  "wcwidth",
  "rich",
  "graphviz",
]

# also self install automind
[build-system]
requires = ["setuptools"]

# define package entry
[tool.setuptools.packages.find]
where = ["src"]

# more setting refer to: https://microsoft.github.io/pyright/#/configuration?id=sample-pyprojecttoml-file
[tool.pyright]
disableOrganizeImports = true
include = ["src"]
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
extraPaths = ["typings"]
autoSearchPaths = true
diagnosticMode = "workspace"
typeCheckingMode = "standard"


[tool.ruff.lint]
ignore = ["F403", "E402"]
exclude = ["**/__init__.py"]

[tool.ruff]
line-length = 80
