[project]
name = "template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # -------------------- type stubs --------------------
  "pandas-stubs",
  "scipy-stubs",
  "microsoft-python-type-stubs@git+https://github.com/microsoft/python-type-stubs.git",

  # -------------------- visualization --------------------
  "matplotlib",
  "seaborn",

  # -------------------- testing --------------------
  "pytest",
  "psutil",
  "debugpy",

  # -------------------- util --------------------
  "setuptools",
  "wheel",
  "python-dotenv",
  "wcwidth",
  "rich",
  "graphviz",
  "pdm",
]

# install self
[build-system]
requires = ["setuptools"]

# pdm command
[tool.pdm.scripts]

# more setting refer to: https://microsoft.github.io/pyright/#/configuration?id=sample-pyprojecttoml-file
[tool.pyright]
include = ["src"]
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
extraPaths = ["typings"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["F403", "E402"]
exclude = ["**/__init__.py"]

# define package entry
[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
template = { path = "../template/", editable = true }
